--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                     <h2 class="content-title">About Me</h2>
                     <hr />
                     <img class="photo" src="assets/images/me.jpg" />
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dolorem odio quam corrupti voluptas ex molestias culpa? Voluptate ipsa eligendi, voluptatum in assumenda, architecto nesciunt ipsam veniam fugiat consequatur nihil. Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima quidem molestiae earum praesentium sint ducimus autem perferendis adipisci quam perspiciatis magnam tempora omnis sapiente aspernatur, quod est facilis qui quis!</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dolorem odio quam corrupti voluptas ex molestias culpa? Voluptate ipsa eligendi, voluptatum in assumenda, architecto nesciunt ipsam veniam fugiat consequatur nihil. Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima quidem molestiae earum praesentium sint ducimus autem perferendis adipisci quam perspiciatis magnam tempora omnis sapiente aspernatur, quod est facilis qui quis!</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dolorem odio quam corrupti voluptas ex molestias culpa? Voluptate ipsa eligendi, voluptatum in assumenda, architecto nesciunt ipsam veniam fugiat consequatur nihil. Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima quidem molestiae earum praesentium sint ducimus autem perferendis adipisci quam perspiciatis magnam tempora omnis sapiente aspernatur, quod est facilis qui quis!</p>
+                    <p>So I'm guessing you'd like to know a little something about me? I am a student at UC Berkeley extensions studying in the coding bootcamp program. I currently work fulltime at Saint Mary's Hospital in San Francisco as an O.R. Tech.</p>
+                    <p>Some of my hobbies consist of producing music and sound engineering. I also DJ on the side and collect various vinyl so I can search for samples to use in my music production.</p>
+                    <p>I am a music enthusiast, which means you'll probably see me at multiple music events and shows watching my favorite artists. I also like to collaborate with other music producers to ccreate songs and tracks from scratch.  </p>
                     
                 </div>
             </div>
